test/files/neg/t6260_delambdafy_method.check
t6260_delambdafy_method.scala:3: error: bridge generated for member method apply: (bx: Object)Object in class Box$lambda$map$extension$1
which overrides method apply: (v1: Object)Object in trait Function1
clashes with definition of the member itself;
both have erased type (bx: Object)Object
    ((bx: Box[X]) => new Box(f(bx.x)))(this)
                  ^
t6260_delambdafy_method.scala:8: error: bridge generated for member method apply: (bx: Object)Object in class Test$lambda$map2$1
which overrides method apply: (v1: Object)Object in trait Function1
clashes with definition of the member itself;
both have erased type (bx: Object)Object
    ((bx: Box[X]) => new Box(f(bx.x)))(self)
                  ^
two errors found
